--- a/pruebas/modulo1/templates/modulo1/front/historia.html
+++ b/pruebas/modulo1/templates/modulo1/front/historia.html
@@ -1,5 +1,5 @@
 
-{% extends 'modulo1/main.html'%} {% load static %} {% block contenido %}
+{% extends 'modulo1/front/main.html'%} {% load static %} {% block contenido %}
 <div class="row" id="containerseba">
   <h1 class="text-center text-black">Mundo perritos</h1>
   {% for raza in razas %}
