--- a/pruebas/modulo1/templates/modulo1/front/home.html
+++ b/pruebas/modulo1/templates/modulo1/front/home.html
@@ -1,4 +1,4 @@
-{% extends 'modulo1/main.html'%} {% load static %} {% load crispy_forms_tags %}
+{% extends 'modulo1/front/main.html'%} {% load static %} {% load crispy_forms_tags %}
 {% block contenido %}
 
 <div class="container-fluid text-center row pt-1">
