--- a/pruebas/modulo1/templates/modulo1/front/tienda.html
+++ b/pruebas/modulo1/templates/modulo1/front/tienda.html
@@ -1,4 +1,4 @@
-{% extends 'modulo1/main.html'%} {% load static %}
+{% extends 'modulo1/front/main.html'%} {% load static %}
 
 {% block contenido %} 
 
