--- a/pruebas/modulo1/templates/modulo1/back/agregar_raza.html
+++ b/pruebas/modulo1/templates/modulo1/back/agregar_raza.html
@@ -1,4 +1,4 @@
-{% extends 'modulo1/main.html' %} {% load static %} {% block contenido %}
+{% extends 'modulo1/front/main.html' %} {% load static %} {% block contenido %}
 {% load crispy_forms_tags %}
 <div class="row col-12 col-md-6 offset-md-3 pt-2">
 
