--- a/pruebas/modulo1/templates/modulo1/front/home.html
+++ b/pruebas/modulo1/templates/modulo1/front/home.html
@@ -14,7 +14,7 @@
           </h1>
           
           
-          <h2 class="mb-2 text-white">Todo sobre nuestros amigos peludos.</h2>
+          <h2 class="mb-2 text-white">Todo sobre nuestros amigos peludosssss.</h2>
         </div>
       </div>
     </div>
