--- a/pruebas/modulo1/templates/modulo1/front/home.html
+++ b/pruebas/modulo1/templates/modulo1/front/home.html
@@ -2,11 +2,11 @@
 {% block contenido %}
 
 <div class="container-fluid text-center row pt-1">
-  <section class="page-section1 cta mb-1 ">
+  <section class="page-section1 cta mb-1 mt-5">
   <div class="container mt-6">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <div class="cta-inner text-center rounded">
+        <div class="cta-inner text-center rounded mt-4 mb-5">
           <h1 class="section-heading mb-4">
             <span class="section-heading-upper" style="color: white"
               >Mundo Perritos
@@ -21,7 +21,7 @@
   </div>
 </section>
 <br />
-<div class="col-12" align="center">
+<div class="col-12 mt-5" align="center">
   <div class="col row">
     <div class="col row">
       <div class="card" id="card-border">
@@ -37,7 +37,7 @@
           <p class="card-text">
             Los mejores cuidados y tips para razas pequeñas y cachorros.
           </p>
-          <a href="{% url 'historia' %}" class="btn" id="boton1">Ver Más</a>
+          <a href="{% url 'historia' %}" class="btn btn-success">Ver Más</a>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
           <p class="card-text">
             Todos los consejos para cuidar y fortalecer a razas medianas.
           </p>
-          <a href="{% url 'historia' %}" class="btn" id="boton1">Ver Más</a>
+          <a href="{% url 'historia' %}" class="btn btn-success">Ver Más</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
           <p class="card-text">
             Recomendaciones para la crianza y crecimiento de razas grandes.
           </p>
-          <a href="{% url 'historia' %}" class="btn" id="boton1">Ver Más</a>
+          <a href="{% url 'historia' %}" class="btn btn-success">Ver Más</a>
         </div>
       </div>
     </div>
@@ -97,13 +97,15 @@
           >
             <button
               type="button"
-              class="btn btn-info btn-lg px-4 me-md-2 fw-bold"
+              class="btn btn-success btn-lg px-4 me-md-2 fw-bold"
+              
             >
               Ver Tienda
             </button>
             <button
               type="button"
-              class="btn btn-outline-primary btn-lg px-4 text-white"
+              class="btn btn-success btn-lg px-4 text-white"
+              
             >
               Quiero información sobre cuidados y alimentación
             </button>
@@ -122,6 +124,15 @@
 
 
   <div class="row pb-2" id="container2">
+
+    {% if request.user.is_authenticated %} {% include "carro/widget.html" %}
+
+    <a href="{% url 'home' %}" class="btn btn-success btn-sm">Comprar</a> {% else %}
+    <br/>
+    <div class="alert alert-danger text-center"> Logueate para ver el carro
+    </div>
+    {% endif %}
+
     <h1 class="text-center text-black">Nuestros productos en OFERTA</h1>
    <!--
     {% for raza in razas %}
@@ -147,7 +158,7 @@
                 <p>{{producto.descripcion}}</p>
                 <strong>${{producto.precio|floatformat:0}}</strong>
                 <br>
-                <button class="btn btn-sm btn-primary mt-1">Agregar al carro</button>
+                <button class="btn btn-success btn-sm btn-primary mt-1">Agregar al carro</button>
                 <hr />
             </div>
         </div>
@@ -175,16 +186,16 @@
              recordándonos siempre el valor de la lealtad y la amistad verdadera.
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-center mt-4 mb-3">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
+            <button type="button" class="btn btn-success btn-lg px-4 me-md-2">
               Historia de los perros
             </button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+            <button type="button" class="btn btn-success btn-lg px-4">
               Categorias
             </button>
           </div>
         </div>
       </div>
-      <button class="btn btn-danger">IR A LA TIENDA</button>
+      <a href="{% url 'tienda' %}" class="btn btn-success">Ver Tienda</a>
     </div>
   
 <div class="pt-2">
