--- a/pruebas/modulo1/templates/modulo1/back/listar.html
+++ b/pruebas/modulo1/templates/modulo1/back/listar.html
@@ -39,7 +39,7 @@
 
             </tr>
 
-            {% for p in razas %}
+            {% for p in productos %}
 
             <tr>
                 <td>{{ p.id | title }}</td>
