--- a/pruebas/modulo1/templates/modulo1/front/home.html
+++ b/pruebas/modulo1/templates/modulo1/front/home.html
@@ -84,11 +84,11 @@
         class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 "
       >
         <div class="col-lg-9 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1">
+          <h1 class="display-4  lh-1">
             Que tu perro sea el rey de la casa con nuestros productos
             especialmente seleccionados
           </h1>
-          <p class="lead text-white mb-5">
+          <p class="lead text-white mb-5 mt-4">
             Tenemos las mejores marcas y el surtido más variado, revisa nuestra
             tienda online
           </p>
